# souleater

./: .gitmodules  CMakeLists.txt
resources/: metadata.yaml
src/: main.cpp
src/Component/: Component.cpp  Component.h
src/Component/AnimationComponent/: Animation.h  AnimationComponent.cpp  AnimationComponent.h
src/Component/SpriteComponent/: SpriteComponent.cpp  SpriteComponent.h
src/Component/TransformComponent/: TransformComponent.cpp  TransformComponent.h
src/Entity/: Entity.cpp  Entity.h
src/Game/: Game.cpp  Game.h
src/Game/Player/: Player.cpp  Player.h
src/ResourceManager/: Resource.h  ResourceManager.cpp  ResourceManager.h
